--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cloud_firestore: ^4.17.5
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
+  device_preview: ^1.2.0
   dio: ^5.4.3+1
   firebase_auth: ^4.20.0
   firebase_core: ^2.32.0
