--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,9 +51,11 @@ dependencies:
   get_it: ^7.7.0
   gradient_borders: ^1.0.1
   image_picker: ^1.1.1
+  loading_animation_widget: ^1.2.1
   lottie: ^3.1.2
   path: ^1.9.0
   permission_handler: ^11.3.1
+  pretty_dio_logger: ^1.3.1
   shared_preferences: ^2.2.3
   shimmer: ^3.0.0
   sqflite: ^2.3.3+1
