--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.4.0
   flutter_secure_storage: ^9.2.2
+  flutter_spinkit: ^5.2.1
   fluttertoast: ^8.2.5
   font_awesome_flutter: ^10.7.0
   get_it: ^7.7.0
