--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   shared_preferences: ^2.2.3
   shimmer: ^3.0.0
   sqflite: ^2.3.3+1
+  transparent_image: ^2.0.1
   url_launcher: ^6.2.6
 
 flutter_launcher_icons:
